rns-lang/tests/snapshots/general-EmptyClass_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
.class public EmptyClass
.super java/lang/Object

.end class
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.end class
----- STDERR -----

----- HASH -----
6ca06cf5278c333da7070fb8e3697d6eab10104ce1884b183f7e47cc1e48b421
