rns-lang/tests/snapshots/general-HelloWorld_werror.snap.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 10 locals 10
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .end code
.end method

.method public static main ([Ljava/lang/String;)V
    .code stack 10 locals 10
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc "Hello World!"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .end code
.end method
.end class
----- INPUT -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 10 locals 10
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .end code
.end method

.method public static main ([Ljava/lang/String;)V
    .code stack 10 locals 10
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc "Hello World!"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .end code
.end method
.end class
----- STDERR -----

----- HASH -----
69ab8f9a2642212208b379e989a6eb4fbbfe8c5c315901159e42fcc384591674
